# PRISM

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: ColoredBitcrusher.h  Effects.cpp  Effects.h  Lfo.h  MultiModeFilter.h  Oscillator.h  PrismVoice.cpp  PrismVoice.h  Svf.h  SynthEngine.cpp  SynthEngine.h
Source/params/: Parameters.cpp  Parameters.h  Presets.cpp  Presets.h
Source/ui/: Displays.h  GlowKnob.h  PrismLookAndFeel.cpp  PrismLookAndFeel.h  SectionPanel.h  SupernovaButton.h  Theme.h
